Updated show view for the machine controller to showcase the list of snacks per machine.

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,1 +1,6 @@
 <h1><%= @machine.location %> Vending Machine</h1>
+
+<h3>Snacks</h3>
+<% @machine.snacks.each do |snack| %>
+  <p>* <%= snack.name %>: $<%= number_with_precision(snack.price, :precision => 2) %><p>
+<% end %>
