--- a/app/views/snacks/show.html.erb
+++ b/app/views/snacks/show.html.erb
@@ -1,2 +1,6 @@
 <h3><%= @snack.name %></h3>
 <p>Price: $<%= number_with_precision(@snack.price, :precision => 2) %><p>
+<h4>Locations</h4>
+<% @snack.machines.each do |machine| %>
+  <p>* <%= machine.location %> (<%= machine.snacks.count %> kinds of snacks, average price of $<%= number_with_precision(machine.average_price, :precision => 2) %>)</p>
+<% end %>
